...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/admin_orders_title">

            <Spinner
                android:id="@+id/users_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:layout_gravity="center"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
...
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.04" />


                    <EditText
                        android:id="@+id/cif_change"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/edittext_layout"
                        android:inputType="text"
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/aproved_label"
                        app:layout_constraintVertical_bias="0.289" />

                    <ImageButton
                        android:id="@+id/remove_user_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_cancel_24"
                        app:layout_constraintBottom_toTopOf="@+id/campos_obligatorios_label"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.844"
...
                android:layout_marginStart="10dp"
                android:text="@string/erase_all_users_question_text"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/erase_all_users"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/ic_baseline_cancel_24"
                android:textColorHighlight="@color/black"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/erase_all_users" />
            <ImageButton
                android:id="@+id/admin_users_reload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_reload_users_24"/>

        </LinearLayout>
        <Button
            android:id="@+id/update_user_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_drawable"
            android:paddingHorizontal="5dp"
            android:paddingVertical="3dp"
            android:text="@string/accept_changes_text"
...
            app:layout_constraintHorizontal_bias="0.134"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/erase_all_users_question_layout"
            app:layout_constraintVertical_bias="0.093" />

        <Button
            android:id="@+id/cancel_changes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/login_button_drawable"
            android:paddingHorizontal="5dp"
            android:paddingVertical="3dp"
...
